syntax = "proto3";

package centralcommand_dbsvc.v1;

option go_package = "deblasis.net/space-traffic-control/gen/proto/go/centralcommand_dbsvc/proto/v1;centralcommand_dbsvc_v1";

service CentralCommandDBService {
  rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
  rpc CreateShip (CreateShipRequest) returns (CreateShipResponse) {}
  rpc GetAllShips (GetAllShipsRequest) returns (GetAllShipsResponse) {}
  rpc CreateStation (CreateStationRequest) returns (CreateStationResponse) {}
  rpc GetAllStations (GetAllStationsRequest) returns (GetAllStationsResponse) {}

}


message User {
  enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_SHIP = 1;
    ROLE_STATION = 2;
    ROLE_COMMAND = 3;
  }
  int64 id = 1;
  string username = 2;
  string password = 3;
  Role role = 4;
}

message Dock {
  string id = 1;
  string station_id =2;
  int64 num_docking_ports = 3;
  int64 occupied = 4;
  float weight = 5;
}

message Station {
  string id = 1;
  float capacity = 2;
  float used_capacity =3;

  repeated Dock docks = 4;
}

message Ship {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_INFLIGHT=1;
    STATUS_DOCKED=2;
  }
  string id = 1;
  Status status =2;
  float weight = 3;
}


message CreateShipRequest {
  Ship ship = 1;
}
message CreateShipResponse {
  Ship ship = 1;
  string error = 2;
}


message GetAllShipsRequest {
}
message GetAllShipsResponse {
  repeated Ship ships = 1;
  string error = 2;
}

message CreateStationRequest {
  Station station = 1;
}
message CreateStationResponse {
  Station station = 1;
  string error = 2;
}
message GetAllStationsRequest {
}
message GetAllStationsResponse {
  repeated Station stations = 1;
  string error = 2;
}


message ServiceStatusRequest {}

message ServiceStatusResponse {
  int64 code = 1;
  string err = 2;
}